# applets

./: .gitignore  README.md  data_forger9000.html
3body/: main.py
ServerRemover/: Cargo.toml
ServerRemover/src/: config.rs  main.rs
brainfuck-interpreter/src/: main.rs
grade-checker/: grade-checker  setup.sh
into-ascii/: Cargo.toml
into-ascii/src/: main.rs
mailcli/: Cargo.toml
mailcli/src/: config.rs  main.rs
ocr-cli/: Cargo.toml  download_trained.sh
ocr-cli/src/: main.rs
rconsend/: Cargo.toml
rconsend/src/: config.rs  main.rs
rmatrix/: Cargo.toml
rmatrix/src/: lib.rs  main.rs
rstatus/: Cargo.toml
rstatus/src/: main.rs
termclock/: Cargo.toml
termclock/src/: main.rs  numbers.rs
