[package]
name = "server_remover"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
