[package]
name = "mailcli"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10.0-rc.4"
serde_derive = "1.0.117"
serde = "1.0.117"
toml = "0.5.3"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"]}
dirs = "4.0.0"
