[package]
name = "rconsend"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon-rs = "0.1.0"
anyhow = "1.0.54"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
dirs = "4.0.0"
